Trying to fix spacing

--- a/index.css
+++ b/index.css
@@ -1,15 +1,17 @@
-body {
+html, body {
     font-family:Arial, Helvetica, sans-serif;
     background: #1C1C1C;
     color: #FFFFFF;
     display: flex;
     justify-content: center;
+    
 }
 
 .container {
-    margin-top: 2em;
-    padding: 2em;
-    background: #1F2937
+    margin-top: 32px;
+    padding: 32px;
+    background: #1F2937;
+    flex-basis: 500px;
 }
 
 
@@ -18,15 +20,15 @@ h1 span{
 }
 
 .checkboxes {
-    margin-top: 1em;
+    margin-top: 16px;
 }
 
 
 button {
     display: block;
-    margin-top: 2em;
+    margin-top: 32px;
     padding: 5px;
-    font-size: 1em;
+    font-size: 16px;
     background: #10B981;
     color: #FFFFFF;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
@@ -36,7 +38,7 @@ button {
 .pws{
     display: flex;
     justify-content: center;
-    row-gap: 1em;
+
 }
 
 .pw {
@@ -44,26 +46,26 @@ button {
     display: inline-flex;
     padding: 5px;
     text-align: center;
-    height: 1.2em;
-    width: 10em;
+    height: 20px;
+    width: 160px;
     background: #273549;
     color: #55F991;
     border-radius: 6px; 
 }
 
 #pw2-el{
-    margin-left: 0.75em;
+    margin-left: 12px;
 }
 
 hr {
     margin: auto;
-    margin-top: 2em;
-    margin-bottom: 1em;
+    margin-top: 32px;
+    margin-bottom: 16px;
     border: 1px solid #273549;
 }
 
 #copyMsg {
-    height: 1em;
-    font-size: 0.8em;
+    height: 16px;
+    font-size: 13px;
     margin-top: 0;
 }
